--- a/www/app/index.html
+++ b/www/app/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ethereum Mining Pool</title>
-    <meta name="description" content="High profitability Ethereum mining pool"/>
-    <meta name="keywords" content="ethereum, pool, mining, cryptocurrency"/>
+    <title>Nekonium Mining Pool</title>
+    <meta name="description" content="High profitability Nekonium mining pool"/>
+    <meta name="keywords" content="nekonium, ethereum, pool, mining, cryptocurrency"/>
     <script src="https://cdn.polyfill.io/v1/polyfill.min.js?features=Intl.~locale.en"></script>
     {{content-for "head"}}
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
@@ -23,8 +23,15 @@
 
     <footer class="footer">
       <div class="container">
-        <p class="text-muted">&copy; CHANGEME in app/templates/index.html |
-          Powered by <a href="https://github.com/sammy007/open-ethereum-pool" target="_blank">open-ethereum-pool</a> |
+        <p class="text-muted">&copy; Oldbeyond |
+                   
+         <strong>Dev NUKO:</strong>
+          <a href="http://tomotomo9696.xyz:3000/addr/0x286b52330b188fde4faa9615601fbb2b3c43714e" rel="nofollow" target="_blank">
+            0x286b52330b188fde4faa9615601fbb2b3c43714e
+          </a>
+
+ 
+         | Powered by <a href="https://github.com/sammy007/open-ethereum-pool" target="_blank">open-ethereum-pool</a> |
           <strong>Dev ETH/ETC:</strong>
           <a href="https://etherscan.io/address/0xb85150eb365e7df0941f0cf08235f987ba91506a" rel="nofollow" target="_blank">
             0xb85150eb365e7df0941f0cf08235f987ba91506a
