--- a/www/app/index.html
+++ b/www/app/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="nekonium, ethereum, pool, mining, cryptocurrency"/>
     <script src="https://cdn.polyfill.io/v1/polyfill.min.js?features=Intl.~locale.en"></script>
     {{content-for "head"}}
-    <link rel="icon" href="/icon.png" type="image/png"/>
+    <link rel="icon" href="/favicon.ico?v=2" />
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link rel="stylesheet" href="{{rootURL}}assets/open-ethereum-pool.css">
     {{content-for "head-footer"}}
